--- a/server/RdtClient.Service/RdtClient.Service.csproj
+++ b/server/RdtClient.Service/RdtClient.Service.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Aria2.NET" Version="1.0.5" />
     <PackageReference Include="Downloader.NET" Version="1.0.3" />
     <PackageReference Include="MonoTorrent" Version="2.0.7" />
+    <PackageReference Include="Plex.Api" Version="4.1.2" />
     <PackageReference Include="Premiumize.NET" Version="1.0.3" />
     <PackageReference Include="RD.NET" Version="2.1.4" />
     <PackageReference Include="Serilog" Version="2.12.0" />
